--- a/index.html
+++ b/index.html
@@ -264,15 +264,15 @@
         <div class="balance-section">
             <div class="balance-card total">
                 <h3>Total Balance</h3>
-                <div class="amount" id="totalBalance">$0.00</div>
+                <div class="amount" id="totalBalance">₹10000</div>
             </div>
             <div class="balance-card income">
                 <h3>Total Income</h3>
-                <div class="amount" id="totalIncome">$0.00</div>
+                <div class="amount" id="totalIncome">₹0.00</div>
             </div>
             <div class="balance-card expense">
                 <h3>Total Expenses</h3>
-                <div class="amount" id="totalExpense">$0.00</div>
+                <div class="amount" id="totalExpense">₹0.00</div>
             </div>
         </div>
 
@@ -493,3 +493,4 @@
     </script>
 </body>
 </html>
+
